fix modal mobile content overflow issue

--- a/src/components/WorkItem/WorkItem.module.css
+++ b/src/components/WorkItem/WorkItem.module.css
@@ -36,6 +36,7 @@
   height: 70%;
   border-radius: 1rem;
   color: black;
+  overflow: auto;
 }
 
 .topBar {
